Changing to Java 16 and fixing tests and javadoc issues with --add-exports