@@ -5,10 +5,11 @@
   <version>1.1.3-SNAPSHOT</version>
 
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>16</maven.compiler.source>
+    <maven.compiler.target>16</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jdk.add.opens></jdk.add.opens>
+    <jdk.add.exports></jdk.add.exports>
   </properties>
 
   <scm>
@@ -61,6 +62,7 @@
           <target>${maven.compiler.target}</target>
           <fork>true</fork>
           <compilerArgs>
+            <arg>${jdk.add.exports}</arg>
             <arg>-Xlint:-options</arg>
             <arg>-XDignore.symbol.file</arg>
           </compilerArgs>
@@ -98,8 +100,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.5.0</version>
+        <version>3.11.1</version>
           <configuration>
+              <additionalJOptions>
+                <additionalJOption>${jdk.add.exports}</additionalJOption>
+              </additionalJOptions>
               <doclint>all,-missing</doclint>
           </configuration>        
         <executions>
@@ -172,6 +177,7 @@
       </activation>
       <properties>
           <jdk.add.opens>--add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED</jdk.add.opens>
+          <jdk.add.exports>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</jdk.add.exports>
       </properties>
   </profile>
 
@@ -208,7 +214,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.5.0</version>
+          <version>3.11.1</version>
           <configuration>
               <doclint>all,-missing</doclint>
           </configuration>
